* Boards were misaligned in the ignore boards section. (Profile-Modify.php, Profile template, index.css, rtl.css, compat.css) [Bug 3876]  * Boards were misaligned in the advanced search section. (Search template, index.css, rtl.css, compat.css)
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9202 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/rtl.css
+++ b/Themes/core/css/rtl.css
@@ -701,7 +701,11 @@ tr.titlebg td
 	float: right;
 }
 
-#ignoreboards li.category
+.ignoreboards ul
+{
+	margin: 0 1em 0 0;
+}
+.ignoreboards li
 {
 	float: right;
 }
@@ -772,7 +776,11 @@ dl.stats dd
 	text-align: right;
 }
 /* Boards picker */
-#searchform fieldset ul#searchBoardsExpand li.category
+#searchform fieldset div#searchBoardsExpand ul ul
+{
+	margin: 0 1em 0 0;
+}
+#searchform fieldset ul#searchBoardsExpand li
 {
 	float: right;
 }
