--- a/Themes/default/css/rtl.css
+++ b/Themes/default/css/rtl.css
@@ -790,7 +790,11 @@ tr.titlebg td
 	float: right;
 }
 
-#ignoreboards li.category
+.ignoreboards ul
+{
+	margin: 0 1em 0 0;
+}
+.ignoreboards li
 {
 	float: right;
 }
@@ -858,14 +862,24 @@ dl.stats dd
 	text-align: right;
 }
 /* Boards picker */
-#searchform fieldset ul#searchBoardsExpand li.category
+#searchform fieldset div#searchBoardsExpand ul ul
+{
+	margin: 0 1em 0 0;
+}
+#searchform fieldset ul#searchBoardsExpand li
 {
 	float: right;
 }
+#searchform fieldset p
+{
+	text-align: right;
+}
+
 .search_results_posts .buttons
 {
 	padding: 5px 0 0 1em;
 }
+
 /* Styles for the help section.
 ------------------------------------------------- */
 #helpmain h3, #helpmain h4, #helpmain h5, #helpmain h6
